--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,30 +1,97 @@
 .btn {
-  display: inline-flex;
-  margin: 10px 0;
-  padding: 10px 20px;
+  min-width: 280px;
+  border-radius: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  height: 62px;
+  font-family: "VK Sans Display", sans-serif, Arial;
+  font-size: 22px;
+  line-height: 130%;
+  padding-right: 36px;
+  padding-left: 0;
+  transition: 0.1s ease-in-out;
+  position: relative;
+  background-color: #0077FF;
+  color: #ffffff;
 
-  color: $color-default-white;
-
-  background-color: $color-neon-blue;
-  border: none;
-  cursor: pointer;
-
-  transition: opacity $trans-default;
-
-  &--red {
-    background-color: $color-torch-red;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 18px;
+    transform: translateY(-50%);
+    width: 18px;
+    height: 18px;
+    background-image: url(../img/svg/icon-arrow-blue.svg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    filter: brightness(0) invert(1);
   }
 
-  &:disabled {
-    opacity: 0.5;
-
-    pointer-events: none;
-  }
-
-  @media (hover: hover), screen and (min-width: 0\0) {
-    &:hover,
-    &:focus {
-      opacity: 0.8;
+  &:hover {
+    &::after {
+      animation: 0.5s btnArrowAnimation;
     }
+
+    &--big {
+      &::after {
+        animation: 0.5s btnArrowAnimationBig;
+      }
+    }
+  }
+
+  &--white {
+    background-color: $color-default-white;
+    color: #0077FF;
+
+    &::after {
+      filter: unset;
+    }
+  }
+
+  &--big {
+    &::after {
+      right: 23px;
+      width: 23px;
+      height: 23px;
+    }
+  }
+}
+
+@keyframes btnArrowAnimation {
+  0% {
+    background-position: 0 0;
+  }
+
+  50% {
+    background-position: 18px -18px;
+  }
+
+  51% {
+    background-position: -18px 18px;
+  }
+
+  100% {
+    background-position: 0 0;
+  }
+}
+
+@keyframes btnArrowAnimationBig {
+  0% {
+    background-position: 0 0;
+  }
+
+  50% {
+    background-position: 23px -23px;
+  }
+
+  51% {
+    background-position: -23px 23px;
+  }
+
+  100% {
+    background-position: 0 0;
   }
 }
